Begin to make authentication secure httponly for refresh and signal for actual token